# libft

./: CMakeLists.txt  Makefile  README.md  ft_isalnum.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_memchr.c  ft_memcmp.c  ft_putchar_fd.c  ft_putnbr_fd.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strmapi.c  ft_strnstr.c  ft_strtrim.c  ft_substr.c  ft_tolower.c  ft_toupper.c  libft.h
inc/: libft.h  pair.h
src/: ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_duplicate_element.c  ft_isalpha.c  ft_isemptyline.c  ft_iswhitespace.c  ft_itoa.c  ft_memccpy.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putendl_fd.c  ft_putstr_fd.c  ft_realloc.c  ft_split.c  ft_strcmp.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strncmp.c  ft_strrchr.c  ft_substr.c  pair.c
